# luneos-camera

./: .gitignore  CMakeLists.txt  README.md  appinfo.json
CameraApp/: CMakeLists.txt  advancedcamerasettings.cpp  advancedcamerasettings.h  components.cpp  foldersmodel.cpp  foldersmodel.h  pieslice.cpp  pieslice.h  storagelocations.cpp
qml/: CameraView.qml  CaptureOverlay.qml  GalleryView.qml  PhotoRollHint.qml  PreferencesModel.qml  PreferencesOverlay.qml  PreferencesView.qml  VideoReview.qml  ViewFinderExportConfirmation.qml  ViewFinderView.qml  luneos-camera.qmlproject  main.qml
qml/components/: CornerShader.qml  ExclusiveGroup.qml  GridLines.qml  LuneOSButtonElement.qml  MenuItemRingArc.qml  PrefsMenuItem.qml  RadialMenuItemCanvas.qml  ResolutionsListModel.qml  TimeoutTimerText.qml  cornershader.vert
